data/derived/comb/progs/unify/prog8100.ml.out
Characters 75-103:
  |(0,2) -> buildX(build(rand, depth-1)) 
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
